existing challenge page completed

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ChallengeAcceptApp</title>
+    <title>Resolute</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya&family=Lora&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7af5c7db55.js" crossorigin="anonymous"></script>
   </head>
